Hecho el menu, situado el footer, los botones principales y el textarea del carrito de la compra

--- a/custom.css
+++ b/custom.css
@@ -9,10 +9,21 @@ left : 0;
 width : 100%;
 background : url(./img/nav_background.png);
 }
+/*
+nav ul ul {
+	display: none;
+}
+
+	nav ul li:hover > ul {
+		display: block;
+	}*/
 .menu_superior ul {
 margin : 0 auto;
 width : 940px;
 list-style : none;
+}
+.menu_superior ul ul{
+  display: none;
 }
 .menu_superior ul li {
 float : left;
@@ -27,6 +38,9 @@ text-align : center;
 text-decoration : none;
 color : #ccc;
 }
+.menu_superior ul li:hover > ul{
+  display: block;
+}
 .menu_superior ul li a:hover {
 color : #fff;
 }
@@ -34,39 +48,98 @@ color : #fff;
 color : #fff;
 }
 .eslogan {
-  position: fixed;
+  border-style: solid;
+  border-radius: 10px;
+
+  width: 75%;
+  padding: 10px;
   top: 100px;
-  left: 200px;
+  float: left;
 }
+.carrito_compra {
+  border-style: solid;
+  border-radius: 10px;
+  right: 0px;
+  width: 200px;
+  padding: 10px;
+  top: 200px;
+  float:right;
+}
+.carrito_compra textarea{
+  border-radius: 10px;
+}
+.segundo{
+  /*position: fixed;
+  left: 100px;
+  top: 150px;*/
+  margin: 15px;
+  margin-right: 100px;
+  margin-top: 100px;
+  position: relative;
+  width: 80%;
+  height: 300px;
+  padding: 10px;
+
+  margin-left: auto;
+  float: none;
+  border-style: solid;
+  border-radius: 10px;
+}
+
+
 .categorias{
-  position: fixed;
-  top: 300px;
+  position: relative;
+  position: absolute;
+  /*top: 300px;*/
   left: 300px;
 }
-#charcuteria{
+/*#charcuteria{
+  display: inline-block;
+  padding: 15px 25px;
+  font-size: 24px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: #4CAF50;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+}*/
+.botones_generales{
+  margin: 60px;
+  display: inline-block;
+  padding: 15px 25px;
+  font-size: 24px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: #4CAF50;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+}
+.botones_generales:hover{
+  background-color: #3e8e41;
+}
+.botones_generales:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+
+/*#fruteria{
   margin: 10%;
-  background-color: black;
+  text-decoration: none;
+  background-image: url(./img/fruteria.jpg);
   background-repeat:no-repeat;
   height:100px;
   width:100px;
   background-position:center;
-}
-#pescaderia{
-    margin: 10%;
-    background-color: black;
-    background-repeat:no-repeat;
-    height:100px;
-    width:100px;
-    background-position:center;
-}
-#fruteria{
-  margin: 10%;
-  background-image: url(./img/);
-  background-repeat:no-repeat;
-  height:100px;
-  width:100px;
-  background-position:center;
-}
+}*/
 
 
 .pie {
