--- a/custom.css
+++ b/custom.css
@@ -47,7 +47,7 @@ color : #fff;
 .menu_superior ul li.selected a {
 color : #fff;
 }
-.eslogan {
+.productos {
   border-style: solid;
   border-radius: 10px;
 
@@ -56,6 +56,22 @@ color : #fff;
   top: 100px;
   float: left;
 }
+.productos h1 {
+  font-size: 2.5em;
+}
+.productos table{
+  width: 100%;
+}
+.productos table .principal td{
+  background-color: light-grey;
+  font-size: 2em;
+}
+.productos table tr td{
+  font-size: 1.2em;
+  margin: 30px;
+}
+
+
 .carrito_compra {
   border-style: solid;
   border-radius: 10px;
