--- a/custom.css
+++ b/custom.css
@@ -9,14 +9,6 @@ left : 0;
 width : 100%;
 background : url(./img/nav_background.png);
 }
-/*
-nav ul ul {
-	display: none;
-}
-
-	nav ul li:hover > ul {
-		display: block;
-	}*/
 .menu_superior ul {
 margin : 0 auto;
 width : 940px;
@@ -38,8 +30,8 @@ text-align : center;
 text-decoration : none;
 color : #ccc;
 }
-.menu_superior ul li:hover > ul{
-  display: block;
+.menu_superior ul li:hover ul{
+  display: inline;
 }
 .menu_superior ul li a:hover {
 color : #fff;
